[package]
name = "systemd-crontab-generator"
version = "0.9.0"
description = "Systemd generator for crontab files support"
readme = "README.md"
repository = "https://github.com/systemd-cron/systemd-cron-next"
license = "MIT"
authors = ["Konstantin Stepanov <me@kstep.me>"]
build = "build.rs"
keywords = ["cron", "crontab", "systemd", "generator"]

[features]
default = ["sched-boot", "sched-hourly", "sched-daily", "sched-weekly", "sched-monthly"]

sched-boot = []
sched-hourly = []
sched-daily = []
sched-weekly = []
sched-monthly = []
sched-yearly = []
sched-minutely = []
sched-quarterly = []
sched-semi-annually = []
persistent = []

[build-dependencies]
rustc-serialize = "*"
handlebars = "*"

[dependencies]
libc = "*"
md5 = "*"
log = "*"
cronparse = "*"
time = "*"
glob = "*"
docopt = "*"
rustc-serialize = "*"
tempfile = "*"
users = "*"
kernlog = "*"
