[package]
name = "systemd-crontab-generator"
version = "1.0.0-rc4"
description = "Systemd generator for crontab files support"
readme = "README.md"
repository = "https://github.com/systemd-cron/systemd-cron-next"
license = "MIT"
authors = ["Konstantin Stepanov <me@kstep.me>"]
build = "build.rs"
keywords = ["cron", "crontab", "systemd", "generator"]

[features]
default = ["sched-boot", "sched-hourly", "sched-daily", "sched-weekly", "sched-monthly"]

sched-boot = []
sched-hourly = []
sched-daily = []
sched-weekly = []
sched-monthly = []
sched-yearly = []
sched-minutely = []
sched-quarterly = []
sched-semi-annually = []
persistent = []

[build-dependencies]
rustc-serialize = "0.3.16"
handlebars = "0.12.0"

[dependencies]
rustc-serialize = "0.3.16"
cronparse = "0.4.0"
docopt = "0.6.78"
glob = "0.2.10"
kernlog = "0.2.0"
libc = "0.2.2"
log = "0.3.4"
md5 = "0.1.1"
tempfile = "1.1.3"
time = "0.1.34"
users = "0.4.4"
